fixed java